<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_five_day_date"
            android:layout_width="match_parent"
            tools:text="1 Şub 03:00"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/item_five_day_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/item_five_day_celcius_tv"
            android:src="@drawable/sunrise"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_five_day_date" />

        <TextView
            android:id="@+id/item_five_day_celcius_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/item_five_day_weather_main_tv"
            app:layout_constraintTop_toBottomOf="@+id/item_five_day_icon"
            android:text="@string/heat_celcius" />

        <TextView
            android:id="@+id/item_five_day_celcius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/item_five_day_weather_main_tv"
            app:layout_constraintStart_toEndOf="@+id/item_five_day_celcius_tv"
            app:layout_constraintTop_toBottomOf="@+id/item_five_day_icon"
            tools:text="22C" />

        <TextView
            android:id="@+id/item_five_day_weather_main_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/item_five_day_wind_speed_tv"
            app:layout_constraintStart_toStartOf="@+id/item_five_day_celcius_tv"
            app:layout_constraintTop_toBottomOf="@+id/item_five_day_celcius_tv"
            android:text="@string/main_state" />

        <TextView
            android:id="@+id/item_five_day_weather_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/item_five_day_wind_speed_tv"
            app:layout_constraintStart_toEndOf="@+id/item_five_day_weather_main_tv"
            app:layout_constraintTop_toBottomOf="@+id/item_five_day_celcius_tv"
            tools:text="Bulutlu" />

        <TextView
            android:id="@+id/item_five_day_wind_speed_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/item_five_day_wind_deg_tv"
            app:layout_constraintStart_toStartOf="@+id/item_five_day_weather_main_tv"
            app:layout_constraintTop_toBottomOf="@id/item_five_day_weather_main_tv"
            android:text="@string/wind_speed" />

        <TextView
            android:id="@+id/item_five_day_wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/item_five_day_wind_speed_tv"
            app:layout_constraintStart_toEndOf="@+id/item_five_day_wind_speed_tv"
            app:layout_constraintTop_toTopOf="@+id/item_five_day_wind_speed_tv"
            tools:text="7 km/s" />

        <TextView
            android:id="@+id/item_five_day_wind_deg_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/item_five_day_humidity_tv"
            app:layout_constraintStart_toStartOf="@+id/item_five_day_wind_speed_tv"
            app:layout_constraintTop_toBottomOf="@id/item_five_day_wind_speed_tv"
            android:text="@string/wind_deg" />

        <TextView
            android:id="@+id/item_five_day_wind_deg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/item_five_day_humidity_tv"
            app:layout_constraintStart_toEndOf="@+id/item_five_day_wind_deg_tv"
            app:layout_constraintTop_toBottomOf="@id/item_five_day_wind_speed_tv"
            tools:text="200" />

        <TextView
            android:id="@+id/item_five_day_humidity_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/item_five_day_wind_deg_tv"
            app:layout_constraintTop_toBottomOf="@id/item_five_day_wind_deg_tv"
            android:text="@string/humidity" />

        <TextView
            android:id="@+id/item_five_day_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_five_day_humidity_tv"
            app:layout_constraintTop_toBottomOf="@id/item_five_day_wind_deg_tv"
            tools:text="5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>